test-data/elab/let/check.snapshot
exit status: 0

stdout = """
#error : #error

"""

stderr = """
error: Syntax error: unexpected `let` while parsing expression
  ┌─ test-data/elab/let/check.pion:1:8
  │
1 │ #check let x: Int = 5;
  │        ^^^

error: Syntax error: unexpected identifier, expected `;`
  ┌─ test-data/elab/let/check.pion:1:12
  │
1 │ #check let x: Int = 5;
  │            ^

error: Syntax error: unexpected `:` while parsing expression
  ┌─ test-data/elab/let/check.pion:1:13
  │
1 │ #check let x: Int = 5;
  │             ^

error: Syntax error: unexpected `=` while parsing expression
  ┌─ test-data/elab/let/check.pion:1:19
  │
1 │ #check let x: Int = 5;
  │                   ^


"""
